Fixed icons alignment

--- a/style.css
+++ b/style.css
@@ -51,15 +51,15 @@ a:hover {
   text-shadow: 3px 3px 6px black;
 }
 
-.icons {
+.icons-panel {
   position: fixed;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto;
+  grid-gap:20px;
   left: 50%;
   bottom: 50px;
-  width: 800px;
-  margin: 0 auto 0 -400px;
-  padding: 0 20px 0 20px;
+  width: 772px;
+  margin: 0 0 0 -386px;
   z-index: 1;
 }
 
@@ -163,44 +163,3 @@ img {vertical-align: middle;}
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
-
-/* Responsive layout */
-
-/*
-@media only screen and (max-width: 1000px) {
-  img.icon {
-    width: 60px;
-    height: 60px;
-    margin: auto;
-  }
-  .icons {
-    width: 700px;
-    margin: 0 auto 0 -350px;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  img.icon {
-      width: 50px;
-      height: 50px;
-      margin: auto;
-    }
-    .icons {
-      width: 600px;
-      margin: 0 auto 0 -300px;
-    }
-}
-
-@media only screen and (max-width: 700px) {
-  img.icon {
-    width: 40px;
-    height: 40px;
-    margin: auto;
-  }
-  .icons {
-    width: 400px;
-    margin: 0 auto 0 -200px;
-  }
-}
-*/
